<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample Search Share</string>
    <string name="title_activity_top_level">Sample Search Share</string>
    <string name="title_activity_contact_detail">Contact Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contacts">Contacts</string>
    <string name="gridView">Grid View</string>
    <string name="drawables">Drawables</string>
    <string name="animation">Animation</string>
    <string name="settings">@string/title_activity_settings</string>
    <string name="empty_string">No contacts</string>
    <string name="address_hint">Address</string>
    <string name="birth_date_label">Birth Date:</string>
    <string name="item_subtitle_sample">Lorem ipsum dolor sit amet, cursus iaculis quisque, tortor placerat vel at sagittis et risus.</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="add_contact_name_hint">Name</string>
    <string name="submit_button_label">Submit</string>
    <string name="no_value_error">Provide a value for the name</string>
    <string name="grid_empty_text">No items</string>

    <!-- Preferences -->
    <string name="title_switch1">Contact Preference</string>
    <string name="summary_switch1">This is a sample summary for the contact preference</string>
    <string name="title_checkbox2">Grid View Preference</string>
    <string name="summary_checkbox2">This is a sample summary for the grid view preference</string>
    <string name="subcategory_title">Sample Subtitle</string>
    <string name="title_list3">List Preference</string>
    <string name="summary_list3">This is a sample summary for the list preference</string>

    <plurals name="notification_count">
        <item quantity="one">There is %d item</item>
        <item quantity="other">There are %d items</item>
    </plurals>

    <string name="notification_item">Item %d content</string>
    <string name="notification_item_big_content">Item %d content: Lorem ipsum dolor sit amet, cursus iaculis quisque, tortor placerat vel at sagittis et risus.</string>
    <string name="appwidget_text">title</string>
    <string name="add_widget">Add widget</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
